# divide-ai-api

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.jenkins.yml  docker-compose.yml  pipeline_instructions.md  pyproject.toml  run.py
.github/: copilot-instructions.md  pull_request_template.md
app/: config.py  database.py  exceptions.py  main.py
app/models/: __init__.py  debt.py  debt_participant.py  group.py  group_member.py  user.py
app/models/enums/: debt_split_type.py  participant_status.py  pix_key_type.py
app/repositories/: debt_repository.py  group_repository.py  user_repository.py
app/routers/: auth.py  debts.py  groups.py  users.py
app/schemas/: debt.py  group.py  user.py
app/services/: debt_service.py  group_service.py  user_service.py
app/utils/: api_errors.py  dependencies.py  jwt.py  storage.py  validators.py
app/validators/: group_validators.py  user_validators.py
jenkins/: Dockerfile  casc.yml  plugins.txt
migrations/: env.py
migrations/versions/: 0001_add_debts.py  0002_add_group_description.py  0003_rename_proof_url.py
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_debts.py  test_group_delete_cascade.py  test_groups.py  test_users.py
tests/repositories/: in_memory_user_repository.py
tests/unit/: test_user_service.py
tests/unit/routers/: test_debts_router.py
tests/unit/schemas/: test_user.py
tests/unit/services/: test_debt_service.py  test_group_service.py  test_user_service.py
tests/unit/utils/: test_validators.py
