[project]
name = "DivideAi"
version = "0.1.0"
description = "Sistema para controle de dívidas em grupos, podendo compartilhar, escolher participantes, abater divídas e facilitar pagamentos e confirmações"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "bcrypt",
    "psycopg2-binary",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov>=7.1.0",
    "httpx",
    "pytest-clarity>=1.0.1",
    "pytest-sugar>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--diff-width=60",
    "--diff-symbols",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "migrations/*",
    "*/__init__.py",
    "app/main.py",
    "app/database.py",
    "app/schemas/*",
    "app/repositories/*",
    "app/models/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]